# re-assistant

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  enforce.yaml
re_assistant/: utils.py
re_assistant/collect/: __init__.py  catalog.py  config.py  config.toml  info.py
tests/: test_placeholder.py  test_utils.py
tests/collect/: test_catalog.py  test_collect.py  test_config.py  test_info.py
